@@ -12,9 +12,9 @@
 	<div id="tx-community-grouplist">
 		<!-- ###LOOP:GROUPS### begin -->
 		<!-- ###LOOP_CONTENT### -->
-		<div id="groupTeaser###GROUP_UID###">
-			<p><a href="###GROUP_URL###">###GROUP_TITLE###</a></p>
-			<p>###GROUP_DESCRIPTION###</p>
+		<div id="groupTeaser###GROUP.UID###">
+			<p><a href="###GROUP.URL###">###GROUP.TITLE###</a></p>
+			<p>###GROUP.DESCRIPTION###</p>
 		</div>
 		<!-- ###LOOP_CONTENT### -->
 		<!-- ###LOOP:GROUPS### end -->
